--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="fname"> FIRST NAME: </label>
-                                <input type="text" id="fname" name="first-name">
+                                <input type="text" id="fname" name="first-name" maxlength="20">
                             </div>
                             <div class="form-group">
                                 <label for="lname"> LAST NAME: </label>
-                                <input type="text" id="lname" name="last-name">
+                                <input type="text" id="lname" name="last-name" maxlength="20">
                             </div>
                         </div>
 
@@ -48,7 +48,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="number"> PHONE NUMBER: </label>
-                                <input type="tel" id="number" name="phone-number">
+                                <input type="tel" id="number" name="phone-number" maxlength="8">
                             </div>
                         </div>
 
@@ -63,12 +63,12 @@
                             </div>
                         </div>
                     </fieldset>
-                    <div class="btn-container">
-                        <button type="submit" class="btn-submit">Create Account</button>
-                    </div>
                 </form>
         </div>
         <div class="bottom-paragraph">
+            <div class="btn-container">
+                <button type="submit" class="btn-submit">Create Account</button>
+            </div>
             <div class="login-text">
                 <span>Already have an account?</span>
                 <a href="">Log in</a>
